<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/background_material_dark">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        tools:context="com.udacity.h3u.popularmovies.DetailActivity.DetailFragment">

        <FrameLayout
            android:id="@+id/movie_detail_frame_backdrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            >

            <ImageView
                android:id="@+id/movie_detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/movie_placeholder"
                android:contentDescription="@string/movie_detail_title"
                />
            <TextView
                android:id="@+id/movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/movie_detail_title"
                android:textColor="@color/bright_foreground_material_dark"
                android:background="@color/detail_movie_opacity_background"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/abc_text_size_headline_material" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/movie_detail_frame_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/movie_detail_frame_backdrop">

            <ImageView
                android:id="@+id/movie_detail_poster_thumbnail"
                android:layout_width="154dp"
                android:layout_height="231dp"
                android:src="@drawable/movie_placeholder"
                android:contentDescription=""
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/movie_detail_rating_label"
                        android:text="@string/movie_detail_rating_label"
                        android:textColor="@color/bright_foreground_material_dark"
                        android:textSize="@dimen/abc_text_size_caption_material"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp" />
                    <TextView
                        android:id="@+id/movie_detail_rating"
                        android:text="@string/movie_detail_rating"
                        android:textColor="@color/bright_foreground_material_dark"
                        android:textSize="@dimen/abc_text_size_body_1_material"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="6dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/movie_detail_release_date_label"
                        android:text="@string/movie_detail_release_date_label"
                        android:textColor="@color/bright_foreground_material_dark"
                        android:textSize="@dimen/abc_text_size_caption_material"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp" />
                    <TextView
                        android:id="@+id/movie_detail_release_date"
                        android:text="@string/movie_detail_release_date"
                        android:textColor="@color/bright_foreground_material_dark"
                        android:textSize="@dimen/abc_text_size_body_1_material"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <com.bluejamesbond.text.DocumentView
            android:id="@+id/movie_detail_overview"
            xmlns:ext="http://schemas.android.com/apk/res-auto"
            android:layout_below="@+id/movie_detail_frame_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            ext:documentView_text="@string/movie_detail_overview"
            ext:documentView_textSize="@dimen/abc_text_size_body_1_material"
            ext:documentView_textColor="@color/bright_foreground_material_dark"
            ext:documentView_textAlignment="justified" />
    </RelativeLayout>
</ScrollView>